<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="70sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailInput"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/email">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/password">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4pt"
            android:textColor="#FFFFFF"
            android:textSize="14pt"
            android:textAlignment="center"
            android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>
