<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".task.CreateAndEditTaskActivity">

    <TextView
            android:id="@+id/activityTitle"
            android:text="@string/create_task"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="114dp"
            android:textSize="@dimen/activity_headers"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/taskTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/activityTitle"
            app:layout_constraintBottom_toTopOf="@id/taskDateButton"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/create_task_hint" >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/taskTitleInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            android:id="@+id/taskDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/taskTitleInput"
            app:layout_constraintBottom_toTopOf="@id/taskDescriptionInput"
            android:text="@string/create_task_date"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/taskDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/taskDateButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/createTask"
            android:hint="@string/create_task_description" >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/taskDescriptionInputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textAutoCorrect|textCapSentences|textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            android:id="@+id/createTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/taskDescriptionInput"
            app:layout_constraintBottom_toTopOf="@id/cancelTask" />

    <android.support.design.button.MaterialButton
            android:id="@+id/cancelTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:backgroundTint="@color/app_theme_negative_colour"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/createTask"
            app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
