<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".category.CreateAndEditCategoryActivity">

    <TextView
            android:id="@+id/activityTitle"
            android:text="@string/create_category"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="114dp"
            android:textSize="@dimen/activity_headers"
            android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/activityTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/category_name" >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/categoryTitleInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/categoryTitleInput"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/createCategory"
            android:hint="@string/category_description" >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/categoryDescriptionInputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textAutoCorrect|textCapSentences|textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/createCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_category"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/categoryDescriptionInput"
            app:layout_constraintBottom_toTopOf="@id/cancelCategory" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/createCategory"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
